--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>김다영</title>
 </head>
 <body>
-    <img src="./70_pf/main.jpg" alt="서울우유유통조합">
+<h1>김다영의 web portfolio</h1>
+<p>서울우유 메인페이지 시안입니다.</p>
+<img src="./70_pf/main.jpg" alt="서울우유유통조합">
+
 </body>
 </html>
