--- a/main.html
+++ b/main.html
@@ -6,8 +6,8 @@
     <title>김다영</title>
 </head>
 <body>
-<h1>서울우유</h1>
+<h1>김다영의 web portfolio</h1>
 <p>서울우유 메인페이지 시안입니다.</p>
-<img src="./70_pf/main.jpg" alt="서울우유유통조합" width="300">
+<img src="./70_pf/main.jpg" alt="서울우유유통조합">
 </body>
 </html>
