--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
 <h1>서울우유</h1>
 <p>서울우유 메인페이지 시안입니다.</p>
-<img src="./70_pf/main.jpg" alt="서울우유유통조합" width="300">
+<img src="./70_pf/main.jpg" alt="서울우유" width="00">
 </body>
 </html>
