--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <h1>서울우유</h1>
 <p>서울우유 메인페이지 시안입니다.</p>
-<img src="./70_pf/main.jpg" alt="서울우유" width="00">
+<img src="./70_pf/seoulmilk/main.jpg" alt="서울우유 메인페이지 시안" width="400">
+<img src="./70_pf/seoulmilk/wireframe.jpg" alt="서울우유 메인페이지 시안" width="400">
 </body>
 </html>
