--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 <body>
 <h1>서울우유</h1>
 <p>서울우유 메인페이지 시안입니다.</p>
-<img src="./70_pf/seoulmilk/main.jpg" alt="서울우유 메인페이지 시안" width="400">
-<img src="./70_pf/seoulmilk/wireframe.jpg" alt="서울우유 메인페이지 시안" width="400">
+<ul>
+    <li><img src="./70_pf/seoulmilk/main.jpg" alt="서울우유 메인페이지 시안" style="width:300px; border: 1px solid #ccc"></li>
+    <li><img src="./70_pf/seoulmilk/Wireframe.jpg" alt="서울우유 메인페이지 와이어프레임"  style="width:300px; border: 1px solid #ccc"></li>
+    <li><img src="./70_pf/seoulmilk/SWOT.jpg" alt="서울우유 SWOT"  style="width:300px; border: 1px solid #ccc"></li>
+    <li><img src="./70_pf/seoulmilk/mindmap.jpg" alt="서울우유 MindMap"  style="width:300px; border: 1px solid #ccc"></li>
+</ul>
+    
+
+
+
 </body>
 </html>
